Fix stylesheet link and correct computer score ID in HTML; add game logic in JavaScript and style for buttons

--- a/project2/index.html
+++ b/project2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
     <p id="result"></p>
     <p id="scores">
         Your score : <span id="user-score">0</span>
-        Computer score : <span id="computer-Score">0</span>
+        Computer score : <span id="computer-score">0</span>
     </p>
      <script src="script.js"></script>
     
